--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.17)
 project(leetcode)
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_C_STANDARD 99)
 
 SET (CMAKE_C_COMPILER             "/usr/bin/clang")
 #SET (CMAKE_C_FLAGS                "-Wall -std=c99")
@@ -25,6 +26,13 @@ SET (CMAKE_RANLIB  "/usr/bin/llvm-ranlib")
 
 # 遍历项目根目录下所有的 .cpp 文件
 file (GLOB_RECURSE files *.cpp)
+foreach (file ${files})
+    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
+    add_executable (${exe} ${file})
+    message (\ \ \ \ --\ src/${exe}.cpp\ will\ be\ compiled\ to\ bin/${exe})
+endforeach ()
+
+file (GLOB_RECURSE files *.c)
 foreach (file ${files})
     string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
     add_executable (${exe} ${file})
