--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.17)
+cmake_minimum_required(VERSION 3.16)
 project(leetcode)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -32,9 +32,9 @@ foreach (file ${files})
     message (\ \ \ \ --\ src/${exe}.cpp\ will\ be\ compiled\ to\ bin/${exe})
 endforeach ()
 
-file (GLOB_RECURSE files *.c)
-foreach (file ${files})
-    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
-    add_executable (${exe} ${file})
-    message (\ \ \ \ --\ src/${exe}.cpp\ will\ be\ compiled\ to\ bin/${exe})
-endforeach ()
+#file (GLOB_RECURSE files *.c)
+#foreach (file ${files})
+#    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
+#    add_executable (${exe} ${file})
+#    message (\ \ \ \ --\ src/${exe}.cpp\ will\ be\ compiled\ to\ bin/${exe})
+#endforeach ()
